[Test] to solve bug that causes the about me section to be bigger on small screens on the live version of the website

--- a/src/styling/components/_header.scss
+++ b/src/styling/components/_header.scss
@@ -11,6 +11,7 @@ html {
 header {
     height: 100vh;
     position: relative;
+    background-color: #5036F1;
 
     .webgl {
         height: 100vh;
